fixed pin align bug, update pin styling, switched to official blue color

--- a/style.css
+++ b/style.css
@@ -21,26 +21,34 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
     font-size: 12px;
 }
+.markerHighlight {
+    background-color: #1694b1;
+    padding: 0 1px 0 1px;
+}
 .markerPrice {
     display: inline;
     margin: 0 auto 0 0;
     padding: 2px 4px 2px 8px;
-    background-color: blue;
+    background-color: #1694b1;
 }
 .markerNumber {
     display: inline;
     margin: 0 0 0 auto;
-    background-color: green;
+    color: #2A7F93;
+    background-color: #5ac0d9;
     padding: 2px 4px 2px 4px;
 }
 .markerPoint {
     display: block;
     text-align: center;
+    margin: 0 auto 0 auto;
+    line-height: 100%;
 }
 .markerPoint img {
-    height: 10px;
+    height: 12px;
     vertical-align: top;
 }
+
 
 /* Accordion & listing CSS */
 .accordion-group {
